# AfstudeerOpdracht

./: .clangd  .cmake-format  .cppcheck_suppressions.txt  .gitignore  Files to alter.yaml  Readme.md  To-Do - Robot integration.yaml  settings.yaml
src/abb_drivers/abb_ros2/robot_specific_config/abb_irb120_support/: CMakeLists.txt  package.xml
src/abb_drivers/abb_ros2/robot_specific_config/abb_irb120_support/config/: initial_positions.yaml
src/abb_drivers/abb_ros2/robot_specific_config/abb_irb120_support/launch/: view_robot.launch.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/action/: ExecuteTrajectory.action  Picture.action
src/custom_msgs/msg/: LocatedObject.msg
src/custom_msgs/srv/: MachineControl.srv
src/hmi/: CMakeLists.txt  package.xml
src/hmi/include/: ConfigurationNode.hpp  HumanMachineInterface.hpp
src/hmi/include/config/: Config.hpp  PackageSection.hpp  ParameterSection.hpp
src/hmi/launch/: hmi.launch.py
src/hmi/src/: ConfigurationNode.cpp  HumanMachineInterface.cpp  main.cpp
src/hmi/src/config/: Config.cpp  PackageSection.cpp  ParameterSection.cpp
src/launch_package/: CMakeLists.txt  package.xml
src/launch_package/launch/: launch_app.launch.py  launch_drivers.launch.py
src/launch_package/rviz/: abb_irb120_setup.rviz  rv5as_camera.rviz
src/machine_state_control/: CMakeLists.txt  package.xml
src/machine_state_control/config/: abb_irb120.urdf.xacro  abb_irb120_params.yaml  irb120.urdf.xacro  irb120_params.yaml  rv5as_params.yaml
src/machine_state_control/include/: GripperController.hpp  MachineStateControlNode.hpp  OperationStateEnum.hpp  Rad.hpp
src/machine_state_control/include/PickSolutionFinder/: PickPoseUtils.hpp  PickSolution.hpp  PickSolutionFinder.hpp
src/machine_state_control/include/StateEngine/: StateCreationHandler.hpp  StateEngine.hpp  StateExecutionHandler.hpp
src/machine_state_control/include/StateEngine/Instruction/: AbstractInstruction.hpp  GripperInstruction.hpp  MovementInstruction.hpp  PictureInstruction.hpp  SleepInstruction.hpp
src/machine_state_control/include/StateEngine/State/: AbstractCrateState.hpp  AbstractDisplaceState.hpp  AbstractState.hpp  KnockOverState.hpp  PickState.hpp  PictureState.hpp  PlaceState.hpp  ShuffleState.hpp
src/machine_state_control/include/StateEngine/StatePipeline/: AbstractStatePipeline.hpp  KnockOverStatePipeline.hpp  PickStatePipeline.hpp  PictureStatePipeline.hpp  PlaceStatePipeline.hpp  ShuffleStatePipeline.hpp
src/machine_state_control/launch/: machine_state_control.launch.py
src/machine_state_control/src/: GripperController.cpp  MachineStateControlNode.cpp  main.cpp
src/machine_state_control/src/PickSolutionFinder/: PickPoseUtils.cpp  PickSolution.cpp  PickSolutionFinder.cpp
src/machine_state_control/src/StateEngine/: StateCreationHandler.cpp  StateEngine.cpp  StateExecutionHandler.cpp
src/machine_state_control/src/StateEngine/Instruction/: AbstractInstruction.cpp  GripperInstruction.cpp  MovementInstruction.cpp  PictureInstruction.cpp  SleepInstruction.cpp
src/machine_state_control/src/StateEngine/State/: AbstractCrateState.cpp  AbstractDisplaceState.cpp  AbstractState.cpp  KnockOverState.cpp  PickState.cpp  PictureState.cpp  PlaceState.cpp  ShuffleState.cpp
src/machine_state_control/src/StateEngine/StatePipeline/: AbstractStatePipeline.cpp  KnockOverStatePipeline.cpp  PickStatePipeline.cpp  PictureStatePipeline.cpp  PlaceStatePipeline.cpp  ShuffleStatePipeline.cpp
src/machine_state_control/test/: AbstractState_Test.cpp  PickPoseUtils_Test.cpp  StateExecutionHandler_Test.cpp  main.cpp
src/mitsubishi_driver/melfa_bringup/: CMakeLists.txt
src/mitsubishi_driver/melfa_bringup/launch/: rv5as_control_custom.launch.py
src/mitsubishi_driver/melfa_description/: CMakeLists.txt
src/mitsubishi_driver/melfa_description/config/: initial_positions_rv.yaml
src/mitsubishi_driver/melfa_description/meshes/custom/: crate_collision.stl  realsense_d435.stl
src/mitsubishi_driver/melfa_description/urdf/rv5as_custom/: rv5as.urdf  rv5as.urdf.xacro  rv5as_macro.xacro
src/mitsubishi_driver/melfa_driver/: CMakeLists.txt
src/mitsubishi_driver/melfa_driver/src/: hardware_interface.cpp
src/mitsubishi_driver/melfa_moveit_config/melfa_rv5as_moveit_config/: .setup_assistant  CMakeLists.txt
src/mitsubishi_driver/melfa_moveit_config/melfa_rv5as_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  rv5as.srdf  rv5as_macro.srdf.xacro  rv5as_servo.yaml
src/mitsubishi_driver/melfa_moveit_config/melfa_rv5as_moveit_config/launch/: rv5as_moveit.launch.py
src/mitsubishi_driver/melfa_moveit_config/melfa_rv5as_moveit_config/rviz/: rv5as_moveit.rviz
src/mitsubishi_driver/melfa_moveit_config/melfa_rv5as_moveit_config/src/: servo_keyboard_input.cpp
src/mitsubishi_driver/melfa_msgs/: CMakeLists.txt
src/object_detector/: CMakeLists.txt  package.xml
src/object_detector/config/: abb_irb120.urdf.xacro  irb120.urdf.xacro  params.yaml  realsense_tuning.json  realsense_tuning2.json  realsense_tuning3.json
src/object_detector/include/: Cell.hpp  Cell.inc  Constants.hpp  Conversion.hpp  Conversion.inc  Matrix.hpp  Matrix.inc  MatrixFilters.hpp  MatrixFilters.inc  MatrixSegment.hpp  MatrixSegment.inc  MatrixSegmentFinder.hpp  MatrixSegmentFinder.inc  ObjectDetectNode.hpp
src/object_detector/launch/: object_detector.launch.py
src/object_detector/src/: Conversion.cpp  ObjectDetectNode.cpp  main.cpp  test.cpp
src/object_detector/test/: Conversion_Test.cpp  MatrixFilter_Test.cpp  MatrixSegmentFinder_Test.cpp  Matrix_Test.cpp
src/standalone_trajectory_executor/: CMakeLists.txt  package.xml
src/standalone_trajectory_executor/config/: executor_params.yaml
src/standalone_trajectory_executor/include/: JointVectorUtils.hpp  TrajectoryExecutorNode.hpp
src/standalone_trajectory_executor/launch/: trajectory_executor.launch.py
src/standalone_trajectory_executor/src/: JointVectorUtils.cpp  TrajectoryExecutorNode.cpp  main.cpp
src/standalone_trajectory_executor/test/: JointVectorUtils_Test.cpp  main.cpp
(+691 files in other folders)
