CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(launch_package)
SET(CMAKE_EXPORT_COMPILE_COMMANDS
    ON)

SET(CMAKE_CXX_STANDARD
    17)
SET(CMAKE_CXX_STANDARD_REQUIRED
    ON)
SET(CMAKE_CXX_EXTENSIONS
    OFF)

IF(CMAKE_COMPILER_IS_GNUCXX
   OR CMAKE_CXX_COMPILER_ID
      MATCHES
      "Clang")
  ADD_COMPILE_OPTIONS(
    -Wall
    -Wextra
    -Wpedantic)
ENDIF()

FIND_PACKAGE(ament_cmake REQUIRED)

INSTALL(
  DIRECTORY launch rviz
  DESTINATION share/${PROJECT_NAME})

AMENT_PACKAGE()
